# stricter

./: .gitignore  README.md  pyproject.toml
stricter/: __main__.py
